<resources>
    <string name="app_name">RSGIC(Ramrati Singh Balika Inter College)</string>
    <string name="button">About Us</string>
    <string name="button2">Courses</string>
    <string name="button3">Contact</string>
    <string name="button4">Photos</string>
    <string name="button5">Apply Online</string>

    <string name="paragraph">
        Ramrati Singh Balika Inter College is founded in 1996. It is established in Raghunath Nagar,
        Karanchhapra, Ballia, Uttar Pradesh. We offer admissions in class 6th to class 12th including
        Science stream in class 12th (Intermediate) to both boys and girls. <b>Ramrati Singh Balika
        Inter College was the first Inter College in the area which was exclusively for girls.</b> Now, we offer admissions to both
        boys and girls.
        <b> <i>NIOS (National Institute of Open Schooling) has accredited our school as study centre for D.El.Ed.</i></b>
    </string>

    <string name="reg_courses">
        <b>Regular Courses-:</b>
    </string>

    <string name="spcl_courses">
        <b>Special Courses -:</b>
    </string>

    <string name="spcl_courses1">
        <b> (1) Certification in Yoga </b>
    </string>

    <string name="spcl_courses2">
        <b>(2) Certification in Bombay Art </b>
    </string>

    <string name="course1">
        <b>(1) Class 6 </b>
    </string>

    <string name="course2">
       <b>(2) Class 7</b>
    </string>

    <string name="course3">
        <b>(3) Class 8 </b>
    </string>

    <string name="course4">
        <b>(4) High School (i.e. Class 9 and Class 10)</b>
    </string>

    <string name="course5">
        <b>(5) Intermediate (i.e. Class 11 and 12)</b>
    </string>

    <string name="course6">
       <b>(a) Science stream</b>
    </string>

    <string name="course7">
        <b>(i) with Maths and</b>
    </string>

    <string name="course8">
        <b>(ii) with Biology</b>
    </string>

    <string name="course9">
        <b>(b) Arts stream</b>
    </string>

    <string name="contacts">
        Contact us :
    </string>

    <string name="contact1">
        <b>Mobile No. :</b>  <i>7011051829</i>
    </string>

    <string name="contact2">
       <b> Email :</b> <i>ramratisinghbalikaintercollege@gmail.com</i>
    </string>

    <string name="contact3">
        <b>Facebook :</b>  https://www.facebook.com/ramratisinghgic/
    </string>

    <string name="contact4">
        <b>Instagram :</b> https://www.instagram.com/ramrati_singh_inter_college/
    </string>

    <string name="contact5">
        <b>Website :</b> https://ramratisinghcollege.wixsite.com/balikaintercollege
    </string>
    <string name="todo">TODO</string>
</resources>
