<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_toolbar2"
        android:background="@drawable/rectangle_button">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/newlogopng" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="6dp"
            app:cardCornerRadius="10dp"
            android:padding="10dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact1"
        android:textSize="20sp"
        android:textStyle="italic"
        android:autoLink="phone"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp" />
                <TextView
                    android:id="@+id/site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact5"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:autoLink="all"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact2"
        android:textSize="20sp"
        android:autoLink="email"
        android:textStyle="italic"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/fb_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact3"
        android:textSize="20sp"
        android:textStyle="italic"
        android:autoLink="all"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
         <TextView
                    android:id="@+id/insta_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact4"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:autoLink="all"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    </LinearLayout>
</ScrollView>