<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_toolbar1"
        android:background="@drawable/rectangle_button">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="6dp"
        app:cardCornerRadius="10dp"
        android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/rsgic1"
        android:contentDescription="@string/todo" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="6dp"
        app:cardCornerRadius="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:onClick="about_us"
            android:text="@string/button"
            android:textColor="@android:color/white"/>


        <Button
            android:id="@+id/button2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/round_button"
            android:onClick="courses"
            android:text="@string/button2"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">
    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:onClick="contact"
        android:text="@string/button3"
        android:background="@drawable/round_button"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:onClick="photos"
        android:text="@string/button4"
        android:background="@drawable/round_button"
        android:textColor="@android:color/white"/>

    </LinearLayout>

            <Button
                android:id="@+id/button5"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:onClick="apply"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/button5"
                android:background="@drawable/round_button"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
